- Removed Mongo DB packages and implementations from all projects and replaced it with SQL Db - Tidy up some of the XML documentation - Renamed SampleController to PlayerController - Removed Swagger Response attribute from all controller actions - Removed ILogger dependency from Player Controller as it was not used - Changed Entity Base id member to be INT - Added a few new entity members - Added Soft Delete domain method to both entities - Added UpdatePlayerDetails domain method to the Player entity - Removed the MongoDb context and replaced it with Player db context - Removed CustomIdentityConverter as it was originally implemented for MongoDb ObjectId conversion to string which was a bit overkill - Added route option config to enforce lowercase urls - Removed unused usings from custom OpenApi operations - Removed unused usings from middleware implementations - Regenerated swagger files for v1 and v2 - Updated git ignore file to exclude DotSettings file.
